--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
         </div>
 
         <!-- Portfolio Toggle Button -->
-        <button class="portfolio-toggle-btn" id="portfolioToggleBtn">
-            📊 VIEW PORTFOLIO
-        </button>
+        <div style="display: flex; gap: 10px; margin: 15px 0;">
+            <button class="view-toggle-btn" id="portfolioToggleBtn" style="flex: 1;">
+                📊 PORTFOLIO
+            </button>
+            <button class="view-toggle-btn" id="blackjackToggleBtn" style="flex: 1;">
+                🃏 BLACKJACK
+            </button>
+        </div>
 
         <!-- Market View -->
         <div id="marketView" class="view-panel active">
@@ -168,6 +173,46 @@
                 </div>
             </div>
         </div><!-- End Portfolio View -->
+
+        <!-- Blackjack View -->
+        <div id="blackjackView" class="view-panel">
+            <div class="section">
+                <div class="section-header">♠️ Blackjack Table ♥️</div>
+                
+                <!-- Dealer's Hand -->
+                <div class="blackjack-hand">
+                    <div class="hand-label">Dealer: <span id="dealerTotal">0</span></div>
+                    <div class="cards" id="dealerCards"></div>
+                </div>
+
+                <!-- Player's Hand -->
+                <div class="blackjack-hand">
+                    <div class="hand-label">You: <span id="playerTotal">0</span></div>
+                    <div class="cards" id="playerCards"></div>
+                </div>
+
+                <!-- Betting Area -->
+                <div class="blackjack-bet-area" id="betArea">
+                    <div class="section-header">Place Your Bet</div>
+                    <div style="display: flex; gap: 10px; margin: 10px 0;">
+                        <input type="number" id="betAmount" class="portfolio-quick-input" placeholder="Bet amount" step="10" style="flex: 1;">
+                        <button class="portfolio-quick-btn" onclick="window.quickBet(100)">$100</button>
+                        <button class="portfolio-quick-btn" onclick="window.quickBet(500)">$500</button>
+                        <button class="portfolio-quick-btn" onclick="window.quickBet(1000)">$1K</button>
+                    </div>
+                    <button class="trade-btn" id="dealBtn" onclick="window.startBlackjack()">DEAL</button>
+                </div>
+
+                <!-- Game Actions -->
+                <div class="blackjack-actions" id="gameActions" style="display: none;">
+                    <button class="trade-btn" onclick="window.blackjackHit()">HIT</button>
+                    <button class="trade-btn sell" onclick="window.blackjackStand()">STAND</button>
+                </div>
+
+                <!-- Game Result -->
+                <div class="blackjack-result" id="gameResult"></div>
+            </div>
+        </div><!-- End Blackjack View -->
 
         <div class="footer">
             <button class="nav-btn" id="resetBtn">[ RESET ]</button>
