--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <script type="module" src="js/trading.js"></script>
     <script type="module" src="js/chart.js"></script>
     <script type="module" src="js/ui.js"></script>
+	<script type="module" src="js/auth.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
